--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>로또번호 추첨기</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+  <main class="container">
+    <div class="toolbar">
+      <button id="theme-toggle" type="button">다크모드</button>
+    </div>
+    <h1>로또번호 추첨기</h1>
+    <p>버튼을 누르면 1~45 사이에서 중복 없는 번호 6개를 뽑습니다.</p>
+    <button id="draw-button" type="button">번호 뽑기</button>
+    <div id="result" class="result" aria-live="polite"></div>
+  </main>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
