--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
     <p>버튼을 누르면 1~45 사이에서 중복 없는 번호 6개를 뽑습니다.</p>
     <button id="draw-button" type="button">번호 뽑기</button>
     <div id="result" class="result" aria-live="polite"></div>
+
+    <section class="inquiry-section" aria-labelledby="inquiry-title">
+      <h2 id="inquiry-title">제휴 문의</h2>
+      <p>간단한 정보를 남겨주시면 확인 후 연락드리겠습니다.</p>
+      <form
+        class="inquiry-form"
+        action="https://formspree.io/f/xlgwbody"
+        method="POST"
+      >
+        <input type="hidden" name="_subject" value="신규 제휴 문의" />
+
+        <label for="name">이름</label>
+        <input id="name" name="name" type="text" required />
+
+        <label for="email">이메일</label>
+        <input id="email" name="email" type="email" required />
+
+        <label for="company">회사명</label>
+        <input id="company" name="company" type="text" />
+
+        <label for="message">문의 내용</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+
+        <button class="submit-button" type="submit">문의 보내기</button>
+      </form>
+    </section>
   </main>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
