--- a/index.html
+++ b/index.html
@@ -41,6 +41,34 @@
         <button class="submit-button" type="submit">문의 보내기</button>
       </form>
     </section>
+
+    <section class="comments-section" aria-labelledby="comments-title">
+      <h2 id="comments-title">댓글</h2>
+      <div id="disqus_thread"></div>
+      <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+        */
+        /*
+        var disqus_config = function () {
+          this.page.url = PAGE_URL;
+          this.page.identifier = PAGE_IDENTIFIER;
+        };
+        */
+        (function() {
+          var d = document;
+          var s = d.createElement('script');
+          s.src = 'https://productbuilder-g0fxysqvpt.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+        })();
+      </script>
+      <noscript>
+        Please enable JavaScript to view the
+        <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+      </noscript>
+    </section>
   </main>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
