feat: add Google Analytics gtag to all HTML pages

--- a/about.html
+++ b/about.html
@@ -6,6 +6,14 @@
   <meta name="description" content="로또 인사이트 사이트 운영 목적, 편집 원칙, 문의 방법 안내" />
   <meta name="google-adsense-account" content="ca-pub-8243745874719740" />
   <title>사이트 소개 | 로또 인사이트</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFHNKGDK80"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-QFHNKGDK80');
+  </script>
   <link href="/style.css" rel="stylesheet">
 </head>
 <body>
