--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <meta name="description" content="로또 번호 추첨기와 당첨 확률, 구매 방법, 예산 관리 가이드를 제공하는 실용 정보 사이트입니다." />
   <meta name="google-adsense-account" content="ca-pub-8243745874719740" />
   <title>로또 인사이트 | 추첨기와 실전 가이드</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFHNKGDK80"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-QFHNKGDK80');
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8243745874719740" crossorigin="anonymous"></script>
   <link href="/style.css" rel="stylesheet">
 </head>
