--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,14 @@
   <meta name="description" content="로또 인사이트 개인정보처리방침" />
   <meta name="google-adsense-account" content="ca-pub-8243745874719740" />
   <title>개인정보처리방침 | 로또 인사이트</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFHNKGDK80"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-QFHNKGDK80');
+  </script>
   <link href="/style.css" rel="stylesheet">
 </head>
 <body>
